fix/#120 : 특정 경험 상세 조회 API 수정